<resources>
    <string name="app_name">productsDetector</string>

    <string name="t_reason_camera_permission">Camera permission is required for products detection</string>

    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="added_items">Added items</string>
    <string name="detected_items">Detected items</string>

    <string name="tv_inference_time">Inference time:</string>
    <string name="tv_wait_time">Delay time:</string>
    <string name="tv_delay">Delay</string>
    <string name="tv_showAccuracy">Show </string>
    <string name="btn_save">Save</string>
    <string name="btn_clearAll">Clear all</string>
    <string name="tv_show_accuracy">Show accuracy:</string>

    <string name="d_title_remove_items">Remove items</string>
    <string name="d_content_remove_items">Are you sure to remove all items</string>
    <string name="d_title_save_result">Save result</string>
    <string name="d_content_save_result">Are you finish detecting products?</string>

    <string name="d_btn_yes">Yes</string>
    <string name="d_btn_cancel">Cancel</string>

    <string name="t_list_is_empty">List is empty</string>
    <string name="t_nothing_to_save">Nothing to save</string>

</resources>
